test/syntax-error-2.out
Parse Error: Missing token, expected BRACE_L on line 3 at character offset 12
