test/syntax-error-2.ks

	void main() {
		if (true) foo();
	}